# panzer

./: .gitignore  CMakeLists.txt  Panzer.cpp  Panzer.sln  Panzer.vcxproj  Panzer.vcxproj.filters  bitboard.cpp  bitboard.h  bitboard_constants.h  board.cpp  constants.h  makefile  move.h  name_lookups.h  notes  panzer-bitboard.cpp  panzer.code-workspace  zorbist.h
include/: bitboard.h  bitboard_constants.h  board_utils.h  com.h  eval.h  move.h  piece_square_scores.h  search.h  sliders.h  uci.h  zorbist.h
old_version/: Panzer.cpp  board.h  constants.h
sliding-attacks/: make-magic.cpp  sliders.cpp  sliders.h
src/: bitboard.cpp  board_utils.cpp  com.cpp  eval.cpp  main.cpp  panzer-bitboard.cpp  panzer.cpp  search.cpp  sliders.cpp  zorbist.cpp
src/sliding-attacks/: magic.cpp
tests/: check_tests.cpp  check_tests.h  fen_tests.cpp  fen_tests.h  main.cpp  slider_tests.cpp  slider_tests.h
utils/: board_utils.cpp  board_utils.h
